# data-engineering-final-project

./: .env.example  .gitignore  README.md  draft.md  ingest_dota2_data.py  main.py  pyproject.toml
dbt_dota/: .user.yml  dbt_project.yml  profiles.yml
dbt_dota/models/marts/: dim_leagues.sql  fact_main_metadata.sql  schema.yml
dbt_dota/models/staging/: schema.yml  sources.yml  stg_leagues.sql  stg_main_metadata.sql
prefect/flows/: ingest_monthly.py
terraform/: main.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
